// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

enum Status {
  TO_BE_CONFIRMED
  ACTIVE
  CLOSED
  TO_BE_CANCELLED
  CANCELLED
}

enum Frequency {
  ONCE
  ONCE_A_WEEK
  EVERY_TWO_WEEKS
}

Table Client {
  id                                          integer [primary key]
  firstName                                   varchar(50)
  lastName                                    varchar(50)
  email                                       varchar(50) [not null, unique]
  password                                    varchar(60)
  phone                                       varchar(15)
}

Table Visit {
  id                                          integer [primary key]
  reservationId                               integer [not null, ref: > Reservation.id]
  includeDetergents                           boolean [not null]
  canDateBeChanged                            boolean [not null]
}

Table Reservation {
  id                                          integer [primary key]
  name                                        varchar(50) [not null]     
  frequency                                   Frequency [not null] 
  // endDate                                     timestamp [not null]          
  status                                      Status [not null]                 
  addressId                                   integer [not null, ref: > Address.id]
  bookerEmail                                 varchar [not null, ref: > Client.email]           
  bookerFirstName                             varchar(50) [not null]
  bookerLastName                              varchar(50) [not null]
  extraInfo                                   varchar(500)
}


Table Address {
  id                                          integer [primary key]
  street                                      varchar(40) [not null]
  houseNumber                                 varchar(40) [not null]
  postCode                                    varchar(6) [not null]
  city                                        varchar(40) [not null]
}

Table Employee {
  id                                          integer [primary key]
  firstName                                   varchar(50) [not null]
  lastName                                    varchar(50) [not null]
  email                                       varchar(40) [not null, unique]
  password                                    varchar(60) [not null]
  phone                                       varchar(15)
  isAdmin                                     boolean [not null]
}



Table Service {
  id                                          integer [primary key]
  name                                        varchar(50) [not null]
  unitId                                      integer [ref: - Unit.id]
  minNumberOfUnitsIfPrimary                   integer
  minCostIfPrimary                            integer
}

Table PrimarySecondaryService {
  primaryServiceId                            integer [primary key, ref: > Service.id]
  secondaryServiceId                          integer [primary key, ref: > Service.id]
  
}

Table Unit {
  id                                          integer [primary key]
  fullName                                    varchar(60) [not null]
  shortName                                   varchar(40) [not null]
  price                                       numeric(4,2) [not null]
  duration                                    integer [not null]       
}

Table EmployeeService {
  employeeId                                  integer [primary key, ref: > Employee.id]
  serviceId                                   integer [primary key, ref: > Service.id]
}

Table ServiceFrequency {
  serviceId                                   integer [primary key, ref: > Service.id]
  frequencyId                                 integer [primary key, ref: > CleaningFrequency.id]
}

Table CleaningFrequency {
  id                                          integer [primary key]
  name                                        varchar(50) [not null]
  value                                       Frequency [not null]
}


Table ReservationService {
  serviceId                                   integer [primary key, ref: > Service.id]
  reservationId                               integer [primary key, ref: > Reservation.id]
  isMainServiceForReservation                 boolean [not null, not null] 
}

Table VisitPart {
  id                                         integer [primary key]
  employeeId                                 integer [ref: > EmployeeService.employeeId, not null]
  serviceId                                  integer [ref: > EmployeeService.serviceId, not null]
  visitId                                    integer [ref: > Visit.id, not null]
  startDate                                  timestamp [not null]
  endDate                                    timestamp [not null]
  numberOfUnits                              integer [not null]  
  status                                     Status  [not null]
  cost                                       numeric(4,2) [not null]
}
